# exaspoon

./: .gitignore  README.md
exaspoon-demo/: .gitignore  (+2 more)
exaspoon/exaspoon2/: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  stop.sh
exaspoon/exaspoon2/.claude/: settings.local.json
exaspoon/exaspoon2/seeds/1_structure/sql/: 02_schema_core.sql  03_functions_rag.sql  03_realtime_setup.sql
exaspoon/exaspoon2/seeds/2_data/: seed_plans_only copy.py  seed_test_data.py  seed_yearly_data.py
exaspoon/exaspoon2/spoon-core/: .env.example  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.bat  setup.sh  tox.ini
exaspoon/exaspoon2/spoon-core/.github/: Workflow-README.md
exaspoon/exaspoon2/spoon-core/.github/workflows/: ci.yml  release.yml  version-bump.yml
exaspoon/exaspoon2/spoon-core/doc/: agent.md  builtin_tools.md  cli.md  configuration.md  graph_agent.md
exaspoon/exaspoon2/spoon-core/examples/: README.md  chatbot_streaming_demo.py  graph_crypto_analysis.py  intent_graph_demo.py  llm_architecture_example.py  neo_toolkit_agent_demo.py  neofs-agent-demo.py  short_term_memory_usage.py  solana_toolkit_demo.py  turnkey-agent-demo.py  x402_agent_demo.py
exaspoon/exaspoon2/spoon-core/examples/mcp/: SpoonThirdWebagent.py  deepwiki_demo.py  spoon_search_agent.py
exaspoon/exaspoon2/spoon-core/spoon_ai/: __init__.py  chat.py  schema.py
exaspoon/exaspoon2/spoon-core/tests/: test_agent_llm_integration.py  test_llm_manager_integration.py  test_neofs_client.py  test_neofs_utils.py  test_updated_examples.py  test_x402_service.py
exaspoon/exaspoon2/src/: app.py  chart_service.py  exaspoon_agent.py  exaspoon_mcp_gateway.py  realtime_service.py
exaspoon/exaspoon2/static/css/: base.css  chart.css  chat.css  layout.css  style.css  themes.css
exaspoon/exaspoon2/static/js/: app.js  chart.js  chat.js  main.js  matrix.js  realtime_client.js  state.js  ui.js  utils.js
exaspoon/exaspoon2/templates/: page.html
exaspoon/exaspoon2/test/: README.md  app_simple.py  test_agent.py  test_realtime.py  test_sessions.py
exaspoon/exaspoon_next/agents/: README.md  __init__.py  pyproject.toml  requirements.txt
exaspoon/exaspoon_next/agents/src/: __init__.py
exaspoon/exaspoon_next/mcp/exaspoon-db-mcp/: .env.example  .gitignore  Cargo.toml  README.md
(+167 files in other folders)
