[package]
name = "exaspoon-db-mcp"
version = "0.2.0"
edition = "2021"
description = "Supabase-backed MCP server for ExaSpoon"
license = "MIT"

[lib]
name = "exaspoon_db_mcp"
path = "src/lib.rs"

[[bin]]
name = "exaspoon-db-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-openai = { version = "0.31.0-alpha.7", default-features = false, features = ["rustls"] }
async-trait = "0.1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "native-tls"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["macros", "server", "transport-io"] }
schemars = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
supabase_rs = { version = "0.5.0", default-features = false, features = ["rustls"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = "debuginfo"
